--- a/ocamlc/utils/dune
+++ b/ocamlc/utils/dune
@@ -12,35 +12,45 @@
 ;*                                                                        *
 ;**************************************************************************
 
-(rule
- (targets config.ml)
- (mode    fallback)
- (deps    (:mk Makefile)
-          ../Makefile.config
-          ; for now the utils Makefile does not use build_config
-          config.mlp)
- (action  (system "make -f %{mk} %{targets}")))
+;(rule
+; (targets config.ml)
+; (mode    fallback)
+; (deps    (:mk Makefile)
+;          ../Makefile.config
+;          ; for now the utils Makefile does not use build_config
+;          config.mlp)
+; (action  (system "make -f %{mk} %{targets}")))
 
 (rule
- (targets domainstate.ml)
- (mode    fallback)
- (deps    (:conf ../Makefile.config)
+  (target domainstate.ml)
+  (deps
+          ;(:conf ../Makefile.config)
+          ../runtime/caml/m.h
           (:c domainstate.ml.c)
           (:tbl ../runtime/caml/domain_state.tbl))
- (action
-   (with-stdout-to %{targets}
-     (bash
-       "`grep '^CPP=' %{conf} | cut -d'=' -f2` -I ../runtime/caml %{c} %{tbl}"
-       ))))
+  (action
+    (with-stdout-to %{target}
+     (run cpp -I ../runtime/caml %{c})))
+  )
+
+;(rule
+; (targets domainstate.mli)
+; (mode    fallback)
+; (deps    (:conf ../Makefile.config)
+;          (:c domainstate.mli.c)
+;          (:tbl ../runtime/caml/domain_state.tbl))
+; (action
+;   (with-stdout-to %{targets}
+;     (bash
+;       "`grep '^CPP=' %{conf} | cut -d'=' -f2` -I ../runtime/caml %{c} %{tbl}"
+;       ))))
+
+(library
+   (name utils)
+   (wrapped false)
+   (libraries)
+   )
+
 
 (rule
- (targets domainstate.mli)
- (mode    fallback)
- (deps    (:conf ../Makefile.config)
-          (:c domainstate.mli.c)
-          (:tbl ../runtime/caml/domain_state.tbl))
- (action
-   (with-stdout-to %{targets}
-     (bash
-       "`grep '^CPP=' %{conf} | cut -d'=' -f2` -I ../runtime/caml %{c} %{tbl}"
-       ))))
+ (copy ../hack/config.ml config.ml))
