--- a/ocamlc/file_formats/cmi_format/dune
+++ b/ocamlc/file_formats/cmi_format/dune
@@ -1,5 +1,6 @@
 (library
    (name cmi_format)
+   (package ocamlc_kit)
    (libraries utils compiler_parsing typing_types identifiers)
    (flags :standard -w -9)
    )
