--- a/ocamlc/middle_end/flambda/base_types/dune
+++ b/ocamlc/middle_end/flambda/base_types/dune
@@ -1,5 +1,6 @@
 (library
   (name middle_end_flambda_base_types)
+  (package ocamlc_kit)
   (libraries compiler_lambda typing_types compiler_parsing identifiers middle_end_identifiers compiler_clambda)
   (flags :standard -open Middle_end_identifiers -w -9)
   )
