--- a/ocamlc/middle_end/identifiers/dune
+++ b/ocamlc/middle_end/identifiers/dune
@@ -1,5 +1,6 @@
 (library
   (name middle_end_identifiers)
+  (package ocamlc_kit)
   (libraries utils identifiers compiler_lambda compiler_clambda)
   (flags :standard -w -9)
   )
