--- a/ocamlc/asmcomp/x86-shared/dune
+++ b/ocamlc/asmcomp/x86-shared/dune
@@ -1,5 +1,6 @@
 (library
   (name arch_x86_shared)
+  (package ocamlc_kit)
   (libraries utils asmcomp_lang asmcomp_platform_shared)
   (flags :standard -open Asmcomp_platform_shared -w -9)
   (modules_without_implementation x86_ast)
