--- a/ocamlc/clambda/dune
+++ b/ocamlc/clambda/dune
@@ -1,5 +1,6 @@
 (library
   (name compiler_clambda)
+  (package ocamlc_kit)
   (wrapped false)
   (libraries compiler_parsing compiler_lambda identifiers typing_types)
   (flags :standard -w -9)
