--- a/ocamlc/file_formats/cmxs_format/dune
+++ b/ocamlc/file_formats/cmxs_format/dune
@@ -1,5 +1,6 @@
 (library
    (name cmxs_format)
+   (package ocamlc_kit)
    (libraries utils compiler_parsing typing_types)
    (flags :standard -w -9)
    (modules_without_implementation cmxs_format)
