--- a/ocamlc/lambda/dune
+++ b/ocamlc/lambda/dune
@@ -14,6 +14,7 @@
 
 (library
    (name compiler_lambda)
+   (public_name ocamlc_kit.internal.compiler_lambda)
    (wrapped false)
    (libraries
      utils
