--- a/ocamlc/middle_end/closure/dune
+++ b/ocamlc/middle_end/closure/dune
@@ -1,5 +1,6 @@
 (library
   (name middle_end_closure)
+  (package ocamlc_kit)
   (libraries middle_end_shared compiler_lambda compiler_clambda compiler_parsing identifiers typing_types middle_end_identifiers compiler_env)
   (flags :standard -open Middle_end_shared  -open Middle_end_identifiers -w -9)
   )
