--- a/ocamlc/typedtree/dune
+++ b/ocamlc/typedtree/dune
@@ -1,5 +1,6 @@
 (library
    (name compiler_typedtree)
+   (package ocamlc_kit)
    (wrapped false)
    (libraries utils compiler_parsing typing_types cmi_format compiler_env identifiers)
    (flags :standard -w -9)
