--- a/ocamlc/identifiers/dune
+++ b/ocamlc/identifiers/dune
@@ -1,6 +1,6 @@
 (library
   (name identifiers)
-  (package ocamlc_kit)
+  (public_name ocamlc_kit.internal.identifiers)
   (wrapped false)
   (libraries utils)
   (flags :standard -w -9)
