--- a/ocamlc/parsing/dune
+++ b/ocamlc/parsing/dune
@@ -45,7 +45,7 @@
 
 (library
    (name compiler_parsing)
-   (package ocamlc_kit)
+   (public_name ocamlc_kit.internal.compiler_parsing)
    (wrapped false)
    (libraries utils identifiers)
    (flags :standard -w -9)
