Add sexp_of to many types

--- a/ocamlc/identifiers/dune
+++ b/ocamlc/identifiers/dune
@@ -2,6 +2,7 @@
   (name identifiers)
   (public_name ocamlc_kit.internal.identifiers)
   (wrapped false)
-  (libraries utils)
-  (flags :standard -w -9)
+  (libraries utils sexplib)
+  (flags :standard -w -9 -open Sexplib.Std)
+  (preprocess (pps ppx_sexp_conv))
   )
