--- a/ocamlc/asmcomp/lang/dune
+++ b/ocamlc/asmcomp/lang/dune
@@ -2,6 +2,7 @@
   (name asmcomp_lang)
   (public_name ocamlc_kit.internal.asmcomp_lang)
   (wrapped false)
-  (libraries compiler_lambda identifiers compiler_parsing)
-  (flags :standard -w -9)
+  (libraries compiler_lambda identifiers compiler_parsing sexplib)
+  (flags :standard -w -9 -open Sexplib.Std)
+  (preprocess (pps ppx_sexp_conv))
   )
