--- a/ocamlc/lambda/dune
+++ b/ocamlc/lambda/dune
@@ -25,8 +25,11 @@
      typing
      compiler_typedtree
      identifiers
-     tag_values)
-   (flags :standard -w -9)
+     tag_values
+     sexplib
+     )
+   (flags :standard -w -9 -open Sexplib.Std)
+   (preprocess (pps ppx_sexp_conv))
    )
 
 (rule
