--- a/ocamlc/typing/types/dune
+++ b/ocamlc/typing/types/dune
@@ -2,7 +2,8 @@
    (name typing_types)
    (package ocamlc_kit)
    (wrapped false)
-   (libraries utils identifiers compiler_parsing)
-   (flags :standard -w -9)
+   (libraries utils identifiers compiler_parsing sexplib)
+   (flags :standard -w -9 -open Sexplib.Std)
    (modules_without_implementation outcometree)
+   (preprocess (pps ppx_sexp_conv))
    )
