--- a/ocamlc/env/dune
+++ b/ocamlc/env/dune
@@ -1,6 +1,6 @@
 (library
    (name compiler_env)
-   (package ocamlc_kit)
+   (public_name ocamlc_kit.internal.compiler_env)
    (wrapped false)
    (libraries utils typing_types compiler_parsing cmi_format identifiers)
    (flags :standard -open Cmi_format -w -9)
