--- a/ocamlc/typedtree/dune
+++ b/ocamlc/typedtree/dune
@@ -1,6 +1,6 @@
 (library
    (name compiler_typedtree)
-   (package ocamlc_kit)
+   (public_name ocamlc_kit.internal.compiler_typedtree)
    (wrapped false)
    (libraries utils compiler_parsing typing_types cmi_format compiler_env identifiers)
    (flags :standard -w -9)
