--- a/ocamlc/middle_end/flambda/base_types/dune
+++ b/ocamlc/middle_end/flambda/base_types/dune
@@ -2,5 +2,6 @@
   (name middle_end_flambda_base_types)
   (package ocamlc_kit)
   (libraries compiler_lambda typing_types compiler_parsing identifiers middle_end_identifiers compiler_clambda)
-  (flags :standard -open Middle_end_identifiers -w -9)
+  (flags :standard -open Middle_end_identifiers -open Sexplib.Std -w -9)
+  (preprocess (pps ppx_sexp_conv))
   )
