--- a/ocamlc/middle_end/flambda/dune
+++ b/ocamlc/middle_end/flambda/dune
@@ -1,7 +1,8 @@
 (library
   (name middle_end_flambda)
-  (package ocamlc_kit)
+  (public_name ocamlc_kit.internal.middle_end_flambda)
   (libraries compiler_lambda typing_types compiler_parsing identifiers middle_end_identifiers middle_end_flambda_base_types compiler_clambda middle_end_shared)
   (flags :standard -open Middle_end_identifiers -open  Middle_end_flambda_base_types -open Middle_end_shared -w -9)
   (modules_without_implementation inlining_decision_intf simplify_boxed_integer_ops_intf)
+  (preprocess (pps ppx_sexp_conv))
   )
